--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview",
-    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
-    "format": "prettier --write ./src"
+    "lint": "eslint .",
+    "format": "prettier --write ./src",
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
